--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <center>
          
          
-      <a href="country/index2.html " class="btn btn-danger" role="button">Find your Country !</a>
+      <a href="index2.html " class="btn btn-danger" role="button">Find your Country !</a>
        <a href="counterclicker/index3.html" class="btn btn-warning" role="button">Play with your friend !</a>
        <a href="giphy/index4.html" class="btn btn-warning" role="button">Look up for Gifs</a>
         <a href="" class="btn btn-success" role="button">Facebook</a>
